[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-core-analysis"
description = "A library with core primitives for analysis shared across all `Aind.Behavior` tasks"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
    'harp-python',
    'numpy<2.0.0',
    'aind_behavior_services@git+https://github.com/AllenNeuralDynamics/Aind.Behavior.Services@0.7.12',
]

[project.optional-dependencies]


linters = [
    'codespell',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'mypy',
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_core_analysis.__version__"}
readme = {file = ["README.md"]}

[tool.mypy]
enable_incomplete_feature = ["Unpack"]
plugins = [
    "pydantic.mypy",
]

[tool.black]
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_behavior_core_analysis", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 100

[tool.isort]
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100

[tool.codespell]
skip = '.git,*.pdf,*.svg'
ignore-words-list = 'nd'
