[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-core-analysis"
description = "A library with core primitives for analysis shared across all `Aind.Behavior` tasks"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
    'harp-python',
    'numpy<2.0.0', # numpy 2.0.0 is not supported by harp
    'aind_behavior_services@git+https://github.com/AllenNeuralDynamics/Aind.Behavior.Services@0.7.14',
    'pyyaml',
    'requests',
]

[project.optional-dependencies]


linters = [
    'ruff',
    'codespell'
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_core_analysis.__version__"}
readme = {file = ["README.md"]}

[tool.mypy]
enable_incomplete_feature = ["Unpack"]
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build'
ignore-words-list = 'nd'