[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-core-analysis"
description = "A library with core primitives for analysis shared across all `Aind.Behavior` tasks"
authors = [
    { name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org" },
]
license = {text = "MIT"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

dynamic = ["version", "readme"]

dependencies = [
    'harp-python',
    'pydantic',
    'aind_behavior_services',
    'pyyaml',
    'requests',
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.CoreAnalysis/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CoreAnalysis/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CoreAnalysis/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CoreAnalysis/releases"


[project.optional-dependencies]


dev = [
    'ruff',
    'codespell'
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_core_analysis.__version__"}
readme = {file = ["README.md"]}

[tool.mypy]
enable_incomplete_feature = ["Unpack"]
plugins = [
    "pydantic.mypy",
]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock'
ignore-words-list = 'nd'